--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SUPABASE_PROJECT_ID="cgdqefwtyjcypklzhcxz"
-VITE_SUPABASE_PUBLISHABLE_KEY="sb_publishable_h5pp9ML_sQbgoNlzbR0o5Q_wWqoea3c"
-VITE_SUPABASE_URL="https://cgdqefwtyjcypklzhcxz.supabase.co"
+VITE_SUPABASE_PROJECT_ID="fsspteutxmjrjoyplrll"
+VITE_SUPABASE_PUBLISHABLE_KEY="sb_publishable_0gv88uTE8qSQv_MUW40GwQ_GBWkM5Ls"
+VITE_SUPABASE_URL="https://fsspteutxmjrjoyplrll.supabase.co"
